Fix wrap!

--- a/views/sass/partials/_dashboard.scss
+++ b/views/sass/partials/_dashboard.scss
@@ -87,9 +87,10 @@
             }
         }
         .options {
-            padding: 10px 5px;
+            padding: 10px 10px;
             display: flex;
             justify-content: center;
+            flex-wrap: wrap;
             a {
                 display: flex;
                 justify-content: center;
